chore(db): move default SQLite path to data/ and update Render docs\n\n- Default DATABASE_URL -> sqlite:///data/asddb.sqlite3\n- Ensure data dir exists for SQLite\n- docker-compose: mount ./data for Streamlit\n- README: Render disk + DATABASE_URL instructions

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
     environment:
       - PYTHONUNBUFFERED=1
     volumes:
-      - ./asddb.sqlite3:/app/asddb.sqlite3
+      - ./data:/app/data
     ports:
       - "8501:8501"
 
