--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ scikit-learn>=1.7.1
 joblib>=1.5.1
 pandas>=2.3.1
 numpy>=2.3.2
-opencv-python>=4.11.0.86
+opencv-python-headless>=4.11.0.86
 psycopg2-binary>=2.9.10
 sqlalchemy>=2.0.42
 alembic>=1.16.4
