fix(render): hard-pin pythonVersion=3.11.9 and export PYTHON_VERSION

--- a/render.yaml
+++ b/render.yaml
@@ -2,9 +2,11 @@ services:
   - type: web
     name: autism-detect
     env: python
-    pythonVersion: 3.11
-    buildCommand: pip install --upgrade pip setuptools wheel && pip install -r requirements.txt
+    pythonVersion: 3.11.9
+    buildCommand: pip install --upgrade pip setuptools wheel && pip install -r requirements.txt && python -V
     startCommand: streamlit run app.py --server.port $PORT --server.headless true
     envVars:
+      - key: PYTHON_VERSION
+        value: 3.11
       - key: DATABASE_URL
         value: sqlite:////tmp/asddb.sqlite3
