--- a/Dockerfile.streamlit
+++ b/Dockerfile.streamlit
@@ -1,7 +1,8 @@
-FROM python:3.12-slim
+FROM python:3.11-slim
 
 ENV PYTHONDONTWRITEBYTECODE=1 \
-    PYTHONUNBUFFERED=1
+    PYTHONUNBUFFERED=1 \
+    PIP_NO_CACHE_DIR=1
 
 WORKDIR /app
 
@@ -10,19 +11,13 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     ffmpeg libgl1 libglib2.0-0 \
     && rm -rf /var/lib/apt/lists/*
 
-COPY pyproject.toml ./
-RUN pip install --no-cache-dir uv && \
-    uv pip install --system -r <(python - <<'PY'
-import tomllib
-with open('pyproject.toml','rb') as f:
-    print('\n'.join(tomllib.load(f)['project']['dependencies']))
-PY
-)
+COPY requirements.txt ./
+RUN pip install --upgrade pip setuptools wheel && pip install -r requirements.txt
 
 COPY . .
 
 EXPOSE 8501
 
-CMD ["streamlit", "run", "app.py", "--server.port", "8501", "--server.headless", "true"]
+CMD ["bash", "-lc", "streamlit run app.py --server.port ${PORT:-8501} --server.headless true"]
 
 
